# gstreamer-pipeline

./: .clang-tidy  .dockerignore  CMakeLists.txt  README.md  run.sh  setup.sh
docker/: Dockerfile  docker-compose.yml
include/: FrameProcessor.h  FrameSaver.h  GStreamerPipeline.h  Logger.h  gstreamer_pipeline.h
src/: FrameProcessor.cpp  FrameSaver.cpp  GStreamerPipeline.cpp  Logger.cpp  gstreamer_pipeline.cpp  main.cpp
tests/: test_environment.cpp  test_frame_processor.cpp  test_frame_saver.cpp  test_gstreamer_pipeline_functional.cpp  test_pipeline_functional.cpp
